# realworld-rust-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  atlas.hcl  compose.yml  makefile  schema.hcl
.sqlx/: query-697f5f92e7230f44a10679947831ac3132818d9aa238815b0fd81d0edf3ec068.json  query-7f4406696277e0624e468fb91656898a5ced8b7f043fa85d959ce86f2dd658d8.json  query-abfb8fc64e721506db3c390faf6ecbcd91257d59db2f6fd8d6f081b9badb390b.json  query-ef63711ebb28781dfaf588c90f12684844cb115555819bd90c55a1d20e769b18.json
migrations/: 20240819121159_init.down.sql  20240819121159_init.up.sql  20240819123125_add_tag.down.sql  20240819123125_add_tag.up.sql  20240820123048_add_user.up.sql  20240826020638_init.sql  20240826021137_init.sql  20240826055807_create_blog_posts.sql  20240826072155_init.sql  20240826072636_create_todos.sql  20240826072919_add_todo.sql  20240826112946_add_test.sql  20240826123004_create_test_table.sql  20240826123930_users_add_unique.sql  20240826153512_users_add_unique.sql  20240826153542_users_add_unique.sql  20240827023619_updated_users.sql  atlas.sum
schema/: schema.sql
src/: app_config.rs  db.rs  lib.rs  main.rs
src/handler/: mod.rs  tags.rs
src/handler/tags/: api.rs  model.rs
src/handler/user/: api.rs  handler.rs  mod.rs  model.rs
