[package]
name = "realworld-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
envy = "0.4.2"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate" , "chrono"] }
